Fix explore page post icon being cut off (#815)
* Fix explore page icon cut off

* Post component flexbox fix

--- a/app/assets/stylesheets/pages/explore/_index.scss
+++ b/app/assets/stylesheets/pages/explore/_index.scss
@@ -46,9 +46,12 @@
     .post {
       margin: 0 auto 2em auto;
       position: relative;
-      content-visibility: auto;
-      contain-intrinsic-size: 1px 600px;
-      contain: layout paint style;
+
+      .post__content {
+        content-visibility: auto;
+        contain-intrinsic-size: 1px 600px;
+        contain: layout paint style;
+      }
 
       &::after {
         left: auto;
